add notification, javadoc