@@ -1,13 +1,17 @@
 package org.example.doctorai.service;
 
 
-import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import org.example.doctorai.exception.ChatNotFoundException;
 import org.example.doctorai.feignclient.GigaChatClient;
+import org.example.doctorai.model.dto.ChatNotificationDTO;
+import org.example.doctorai.model.dto.UserDTO;
 import org.example.doctorai.model.entity.Chat;
 import org.example.doctorai.model.entity.Message;
+import org.example.doctorai.model.entity.User;
 import org.example.doctorai.model.enums.Doctor;
 import org.example.doctorai.model.request.MessageRequest;
+import org.example.doctorai.producer.KafkaProducer;
 import org.example.doctorai.repository.ChatRepository;
 import org.example.doctorai.repository.UserRepository;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
@@ -21,18 +25,19 @@ import java.util.UUID;
  * Бизнес-логика с доктором
  */
 @Service
-@AllArgsConstructor
+@RequiredArgsConstructor
 public class DoctorService {
 
     private final ChatRepository chatRepository;
     private final UserRepository userRepository;
     private final GigaChatClient gigaChatClient;
+    private final KafkaProducer kafkaProducer;
     private final CustomUserDetailsService customUserDetailsService;
 
     /**
      * Создание чата с доктором
-     * @param doctor
-     * @param userId
+     * @param doctor Доктор
+     * @param userId ID Пользователя
      * @return UUID
      */
     @Transactional
@@ -43,12 +48,13 @@ public class DoctorService {
         chat.setUser(userRepository.findById(userId)
                 .orElseThrow(() -> new UsernameNotFoundException("Пользователь не найден")));
         chatRepository.save(chat);
+        sendKafka(doctor, chat.getUser());
         return chat.getChatId();
     }
 
     /**
      * Настройка чата с GigaChat
-     * @param systemMessage
+     * @param systemMessage Настройка для GigaChat
      * @return {@link Message}
      */
     private Message createMessage(String systemMessage) {
@@ -60,7 +66,7 @@ public class DoctorService {
 
     /**
      * Чат с доктором
-     * @param rawBody
+     * @param rawBody {@link MessageRequest}
      * @return {@link Message}
      */
     @Transactional
@@ -70,19 +76,39 @@ public class DoctorService {
 
         chat.getMessages().add(rawBody.getMessage());
         chat.getMessages()
-                .add(gigaChatClient.requestDoctor(chat, customUserDetailsService.getCurrentUser().id.toString()));
+                .add(gigaChatClient.requestDoctor(chat, customUserDetailsService.getCurrentUser().getId().toString()));
         chatRepository.save(chat);
-        return chat.getMessages().get(chat.getMessages().size() - 1);
+        return chat.getMessages().getLast();
+//        return chat.getMessages().get(chat.getMessages().size() - 1);
     }
 
     /**
      * Вывод чатов с определенным доктором
-     * @param userId
-     * @param doctor
+     * @param userId ID пользователя
+     * @param doctor  {@link Doctor}
      * @return Список чатов {@link Chat}
      */
     @Transactional
     public List<Chat> getChatsDoctor(UUID userId, Doctor doctor) {
         return chatRepository.findAllByUserIdAndDoctor(userId, doctor);
+    }
+
+    /**
+     * Отправка уведомления в kafka
+     *
+     * @param user   {@link User}
+     * @param doctor Название доктора
+     */
+    private void sendKafka(Doctor doctor, User user) {
+        UserDTO userDTO = new UserDTO(user);
+
+
+        ChatNotificationDTO chatNotificationDTO = ChatNotificationDTO
+                .builder()
+                .doctor(doctor.getShortName())
+                .user(userDTO)
+                .build();
+
+        kafkaProducer.sendCreateChat(chatNotificationDTO);
     }
 }
